version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/FE/CDB/RLBlockCommand.rst.txt
.. vale off



:class:`RLBlockCommand`
=======================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.FE.CDB.RLBlockCommand

   Bases: :py:obj:`object`


   
   Represents a RLBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: RLBlockCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Reals`
            - Gets the real constant sets.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]

   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]

   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Reals
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandReal]]

   
   Gets the real constant sets.
















   ..
       !! processed by numpydoc !!







.. vale on